--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.8",
     "@react-three/drei": "^9.69.2",
     "@react-three/fiber": "^8.13.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -24,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
     "react-three-fiber": "^6.0.13",
+    "rsuite": "^5.34.1",
     "three": "^0.152.2"
   },
   "devDependencies": {
