Se realizan correcciones de color y diseño sugeridas por docentes, se crea componentes Tablero, tarjeta e imagenes para la creacion de primer minijuego MemoCard

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
