--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.11.2",
     "react-three-fiber": "^6.0.13",
     "rsuite": "^5.34.1",
+    "sweetalert2": "^11.7.12",
     "three": "^0.152.2"
   },
   "devDependencies": {
