--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
+    "axios-mock-adapter": "^1.21.5",
     "bootstrap": "^5.3.0-alpha3",
     "jest-environment-jsdom": "^29.5.0",
     "mdb-react-ui-kit": "^6.0.0",
